# src/solutions/CMakeLists.txt
add_subdirectory(array)
add_subdirectory(math_problem)
add_subdirectory(string)
add_subdirectory(game)
add_subdirectory(dynamic_programming)
add_subdirectory(binary_tree)
add_subdirectory(graph)
add_subdirectory(knapsack)
add_subdirectory(linked_list)
add_subdirectory(backtrace)